@@ -12,6 +12,25 @@ public class TradingEngine {
 
     private static final int TWAP_WINDOW_SECONDS = 60;
 
+    /*
+     * The probability table contains a 0.001% movement bucket.
+     *
+     * A movement inside half of that bucket is effectively zero from
+     * the perspective of the model and must NOT be interpreted as
+     * either UP or DOWN.
+     *
+     * Otherwise:
+     *
+     *     +0.000%
+     *         -> table.getChance(..., 0)
+     *         -> ~0.47%
+     *         -> 1 - 0.47%
+     *         -> ~99.5% DOWN/UP
+     *
+     * which is exactly the false ~99.5% probability we were seeing.
+     */
+    private static final double ZERO_MOVEMENT_THRESHOLD_PERCENT = 0.0005;
+
     private final ProbabilityTable table;
 
     public TradingEngine(ProbabilityTable table) {
@@ -36,18 +55,30 @@ public class TradingEngine {
 
         double downChance = 1.0 - upChance;
 
-        double upEv = evForSide(upChance, upMarketPrice, takerFee);
-        double downEv = evForSide(downChance, downMarketPrice, takerFee);
+        double upEv = evForSide(
+                upChance,
+                upMarketPrice,
+                takerFee
+        );
 
-        MarketSide recommendedSide = upEv >= downEv
-                ? MarketSide.UP
-                : MarketSide.DOWN;
+        double downEv = evForSide(
+                downChance,
+                downMarketPrice,
+                takerFee
+        );
 
-        double recommendedChance = recommendedSide == MarketSide.UP
-                ? upChance
-                : downChance;
+        MarketSide recommendedSide =
+                upEv >= downEv
+                        ? MarketSide.UP
+                        : MarketSide.DOWN;
 
-        double recommendedEv = Math.max(upEv, downEv);
+        double recommendedChance =
+                recommendedSide == MarketSide.UP
+                        ? upChance
+                        : downChance;
+
+        double recommendedEv =
+                Math.max(upEv, downEv);
 
         return new UpDownEvEstimate(
                 upChance,
@@ -93,12 +124,13 @@ public class TradingEngine {
         secondsLeft = Math.max(0, secondsLeft);
 
         /*
-         * If there is more than one complete TWAP window remaining,
+         * If there is at least one complete TWAP window remaining,
          * the current TWAP has effectively lost its importance.
          *
          * The future live price is the important variable.
          */
         if (secondsLeft >= TWAP_WINDOW_SECONDS) {
+
             double requiredPctChange = percentageChange(
                     currentLivePrice,
                     referencePrice
@@ -114,8 +146,8 @@ public class TradingEngine {
          * We have less than 60 seconds remaining.
          *
          * The current TWAP is already partially determined by historical
-         * prices. Only the observations arriving during the remaining
-         * seconds can move it toward the future live price.
+         * prices. Only observations arriving during the remaining seconds
+         * can move it toward the future live price.
          *
          * Approximation:
          *
@@ -128,7 +160,7 @@ public class TradingEngine {
          *
          *     futureWeight = secondsLeft / 60
          *
-         * Therefore we calculate which future LIVE price would be required
+         * Therefore calculate which future LIVE price would be required
          * for the final TWAP to reach the strike.
          */
         double futureWeight =
@@ -156,21 +188,24 @@ public class TradingEngine {
          * futureLive =
          *     (reference - currentTwap * (1 - w)) / w
          */
-        double currentTwap = currentTwapPrice.doubleValue();
-        double reference = referencePrice.doubleValue();
+        double currentTwap =
+                currentTwapPrice.doubleValue();
+
+        double reference =
+                referencePrice.doubleValue();
 
         double requiredFutureLivePrice =
-                (reference - currentTwap * (1.0 - futureWeight))
+                (reference
+                        - currentTwap * (1.0 - futureWeight))
                         / futureWeight;
 
         /*
-         * We now ask the probability table:
-         *
-         * "What is the probability that live BTC reaches this price
-         *  within the remaining N seconds?"
+         * Calculate the percentage movement required from the current
+         * live BTC price to reach that future live price.
          */
         double requiredPctChange =
-                ((requiredFutureLivePrice - currentLivePrice.doubleValue())
+                ((requiredFutureLivePrice
+                        - currentLivePrice.doubleValue())
                         / currentLivePrice.doubleValue())
                         * 100.0;
 
@@ -183,25 +218,89 @@ public class TradingEngine {
     /**
      * Converts a required percentage movement of the live BTC price into
      * the probability supplied by the historical probability table.
+     *
+     * IMPORTANT:
+     *
+     * The probability table contains movement buckets, for example:
+     *
+     *     -0.001%
+     *      0.000%
+     *     +0.001%
+     *
+     * The 0.000% bucket is NOT an UP/DOWN probability.
+     *
+     * It represents observations whose movement rounded into the zero
+     * movement bucket. Therefore it must never be passed into
+     * getChance() and then interpreted as a directional probability.
+     *
+     * When the required movement is effectively zero, the model has
+     * no directional edge and returns 50/50.
      */
     private double probabilityOfReaching(
             double requiredPctChange,
             int secondsLeft
     ) {
-        secondsLeft = Math.max(0, Math.min(secondsLeft, 300));
+        secondsLeft = Math.clamp(secondsLeft, 0, 300);
 
         /*
-         * If the required movement is zero or negative, the current/live
-         * price is already on the desired side of the target.
+         * ZERO MOVEMENT
+         *
+         * Do this BEFORE calling table.getChance().
+         *
+         * This fixes the ~99.5% bug caused by:
+         *
+         *     getChance(..., 0.0)
+         *
+         * where the 0.000% bucket currently contains only ~0.47%
+         * of observations.
          */
-        if (requiredPctChange <= 0.0) {
-            double probabilityDown =
-                    table.getChance(secondsLeft, Math.abs(requiredPctChange));
+        if (Math.abs(requiredPctChange)
+                < ZERO_MOVEMENT_THRESHOLD_PERCENT) {
 
-            return 1.0 - probabilityDown;
+            return 0.5;
         }
 
-        return table.getChance(secondsLeft, requiredPctChange);
+        /*
+         * Negative required movement:
+         *
+         * We need the future live price to move DOWN by at least
+         * |requiredPctChange|.
+         *
+         * table.getChance() represents the probability of reaching
+         * that movement magnitude in the corresponding direction.
+         *
+         * Therefore:
+         *
+         *     P(UP) = 1 - P(DOWN)
+         */
+        if (requiredPctChange < 0.0) {
+
+            double probabilityDown =
+                    table.getChance(
+                            secondsLeft,
+                            Math.abs(requiredPctChange)
+                    );
+
+            return clampProbability(
+                    1.0 - probabilityDown
+            );
+        }
+
+        /*
+         * Positive required movement:
+         *
+         * We need the future live price to move UP by at least
+         * requiredPctChange.
+         */
+        double probabilityUp =
+                table.getChance(
+                        secondsLeft,
+                        requiredPctChange
+                );
+
+        return clampProbability(
+                probabilityUp
+        );
     }
 
     private double percentageChange(
@@ -209,8 +308,14 @@ public class TradingEngine {
             BigDecimal to
     ) {
         return to.subtract(from)
-                .divide(from, 8, RoundingMode.HALF_UP)
-                .multiply(BigDecimal.valueOf(100))
+                .divide(
+                        from,
+                        8,
+                        RoundingMode.HALF_UP
+                )
+                .multiply(
+                        BigDecimal.valueOf(100)
+                )
                 .doubleValue();
     }
 
@@ -219,15 +324,35 @@ public class TradingEngine {
             double marketPrice,
             double takerFee
     ) {
-        if (marketPrice <= 0.0 || marketPrice >= 1.0) {
+        if (marketPrice <= 0.0
+                || marketPrice >= 1.0) {
             return Double.NEGATIVE_INFINITY;
         }
 
-        double grossPayout = 1.0 / marketPrice;
+        double grossPayout =
+                1.0 / marketPrice;
 
         double netPayout =
-                1.0 + (grossPayout - 1.0) * (1.0 - takerFee);
+                1.0
+                        + (grossPayout - 1.0)
+                        * (1.0 - takerFee);
 
         return winChance * netPayout - 1.0;
+    }
+
+    /**
+     * Protect the trading engine from numerical errors or malformed
+     * probability-table values.
+     */
+    private double clampProbability(
+            double probability
+    ) {
+        if (Double.isNaN(probability)
+                || Double.isInfinite(probability)) {
+            return 0.5;
+        }
+
+        return Math.clamp(probability,
+                0.0, 1.0);
     }
 }
